[package]
authors = ["Torres Farro Denis Joel <djoel_torres@hotmail.com>"]
description = "Convert html to pdf or image"
documentation = "https://github.com/JoelTorresAr/wkhtmlapp.git"
edition = "2021"
keywords = ["wkhtmltopdf", "wkhtmltoimage", "pdf", "image", "html"]
license = "MIT"
name = "wkhtmlapp"
readme = "README.md"
repository = "https://github.com/JoelTorresAr/wkhtmlapp.git"
version = "1.1.0"
exclude = ["/storage","/target"]

[dependencies]
log = "0.4"
uuid = {version = "1", features = ["v4"]}

[dev-dependencies]
env_logger = "0.11"
